--- a/index.html
+++ b/index.html
@@ -1,93 +1,91 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Title of the document</title>
-    <!-- Material Icon CDN -->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Materialize CSS CDN -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <!-- Your custom styles -->
-      <link rel="stylesheet" href="./assets/main.css">
-    <!-- Used as an example only to position the footer at the end of the page.
-    You can delete these styles or move it to your custom css file -->
-    <style>
-      body {
-        display: flex;
-        min-height: 100vh;
-        flex-direction: column;
-        }
-      main {
-        flex: 1 0 auto;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <nav class="cyan">
-        <div class="nav-wrapper">
-          <div class="container">
-            <a href="#" class="brand-logo">LOGO</a>
-            <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
-            <ul class="right hide-on-med-and-down">
-              <li><a href="#">item1</a></li>
-              <li><a href="#">item2</a></li>
-              <li><a href="#">item3</a></li>
-              <li><a href="#">item4</a></li>
-            </ul>
-            <ul class="side-nav" id="mobile-menu">
-              <li>
-                <div class="userView">
-                  <div class="background">
-                    <img src="http://lorempixel.com/output/abstract-q-c-640-480-10.jpg" alt="Background Sidenav">
-                  </div>
-                  <a href="#!user"><img class="circle" src="http://lorempixel.com/output/people-q-c-640-480-9.jpg" alt="User Image Sidenav"></a>
-                  <a href="#!name"><span class="white-text name">John Doe</span></a>
-                  <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
-                </div>
-              </li>
-              <li><a href="#">item1</a></li>
-              <li><a href="#">item2</a></li>
-              <li><a href="#">item3</a></li>
-              <li><a href="#">item4</a></li>
-            </ul>
-          </div>
+
+<head>
+  <title>Train Scheduler</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
+    crossorigin="anonymous">
+</head>
+
+<body>
+  <div class="container">
+
+    <div class="jumbotron text-center">
+      <h1 class="display-3">Train Scheduler</h1>
+      <p class="lead">View List of Upcoming Trains</p>
+      <hr class="my-2">
+      <p>Add a new train below</p>
+      <div id="currentTime"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card mb-3">
+          <div class="card-header">Current Train Schedule</div>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Train Name</th>
+                <th>Destination</th>
+                <th>Frequency</th>
+                <th>Next Arrival</th>
+                <th>Minutes Away</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
         </div>
-      </nav>
-    </header>
-      <main>
-      <!-- Your content here -->
-    </main>
-    <footer class="page-footer cyan">
-      <div class="container">
-        <div class="row">
-          <div class="col s12 m8 l6">
-            <h5 class="white-text">First Footer Content</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-          </div>
-          <div class="col s12 m4 l6">
-            <h5 class="white-text">Second Footer Content</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+      </div>
+    </div>
+    <form>
+      <div class="row">
+        <div class="col-md-12">
+
+          <div class="card mb-3">
+            <div class="card-header">Current Train Schedule</div>
+            <form>
+              <div class="form-group col-md-12">
+                <label for="trainName">Train Name</label>
+                <input type="text" class="form-control" id="trainName">
+              </div>
+              <div class="form-group col-md-12">
+                <label for="traindestination">Train Destination</label>
+                <input type="text" class="form-control" id="traindestination">
+              </div>
+              <div class="form-group col-md-12">
+                <label for="firstTime">First Train Time</label>
+                <input type="time" class="form-control" id="firstTime"></input>
+              </div>
+              <div class="form-group col-md-12">
+                <label for="trainFrequency">Frequency (min)</label>
+                <input type="number" class="form-control" id="trainFrequency"></input>
+              </div>
+              <div class='form-group col-md-12'>
+                <button type="button" class="btn btn-success" id="addTrain">Add</button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
-      <div class="footer-copyright">
-        <div class="container">
-          © 2017 Copyright Text
-          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-        </div>
-      </div>
-    </footer>
-    <!-- jQuery CDN -->
-      <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <!-- Materialize JS CDN -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script>
-      $("document").ready(function(){
-        $(".button-collapse").sideNav();
-      });
-    </script>
-  </body>
+  </div>
+  </div>
+  </div>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
+  <script src="assets/main.js"></script>
+</body>
+
 </html>
